[gd_scene load_steps=4 format=3 uid="uid://b4ige3ufjc0ol"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_2pui2"]
[ext_resource type="Texture2D" uid="uid://bx04ouol726af" path="res://resources/sprites/seisware_logo.png" id="1_lc8on"]
[ext_resource type="FontFile" uid="uid://c7asvn4jruopq" path="res://resources/fonts/PixelOperator8-Bold.ttf" id="2_f2xew"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2pui2")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 224.0
offset_bottom = 288.0
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 224.0
offset_bottom = 288.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_lc8on")
expand_mode = 4
stretch_mode = 5

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_f2xew")
text = "Pac-Man
by Aidan Kelly"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_f2xew")
theme_override_font_sizes/font_size = 16
text = "Play"

[node name="HighScoresButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_f2xew")
text = "High Scores"

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_f2xew")
text = "Exit Game"

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer2/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer2/HighScoresButton" to="." method="_on_high_scores_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer2/ExitButton" to="." method="_on_exit_button_pressed"]
